[package]
name = "pessimistic-proof-program"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bincode = "1.3.3"
pessimistic-proof = { path = "../pessimistic-proof" }
serde = { version = "1.0.216", features = ["derive"] }
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git" }

[build-dependencies]
serde = { version = "1.0.216", features = ["derive"] }

