[package]
name = "pessimistic-proof-program"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bincode = "1.3.3"
sp1-zkvm = "3.0.0"
serde = { version = "1.0.216", features = ["derive"] }
pessimistic-proof = { path = "../pessimistic-proof" }

[build-dependencies]
sp1-cli = "3.0.0"
serde = { version = "1.0.216", features = ["derive"] }
